# ViT-mini

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-app.yml
src/: attention.py  config.py  data.py  model.py  model_components.py  train.py  utils.py
tests/: test_attention.py  test_data.py  test_model.py  test_model_components.py  test_train.py
